--- a/app/views/docs/show.html.haml
+++ b/app/views/docs/show.html.haml
@@ -5,6 +5,6 @@
         = render :partial => @docs_toc
     .col-md-9
       .documentation
-        = render :partial => @docs_content
+        ~ render :partial => @docs_content
 
 = render :partial => 'layouts/container'
